tests/ui/missing_intopy.stderr
error[E0277]: the trait bound `Blah: OkWrap<Blah>` is not satisfied
 --> tests/ui/missing_intopy.rs:3:1
  |
3 | #[pyo3::pyfunction]
  | ^^^^^^^^^^^^^^^^^^^ the trait `IntoPy<Py<PyAny>>` is not implemented for `Blah`, which is required by `Blah: OkWrap<_>`
  |
  = help: the trait `OkWrap<T>` is implemented for `Result<T, E>`
  = note: required for `Blah` to implement `OkWrap<Blah>`
  = note: this error originates in the attribute macro `pyo3::pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)
